[Update] fix dragging element z-index add undo/redo

--- a/public/stylesheets/roadEditor.css
+++ b/public/stylesheets/roadEditor.css
@@ -123,6 +123,7 @@
     max-height: 300px;
     position: absolute;
     pointer-events: none;
+    z-index:2;
 }
 
 .roadScope {
@@ -181,3 +182,26 @@
         width: calc(100% - 0px);
     }
 }
+
+.utilButton{
+    aspect-ratio:1;
+    height:100%;
+    margin-right:5px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    color:lightgray;
+}
+
+.utilButton.active{
+    color:gray;
+    transition-duration: 200ms;
+}
+
+.utilButton.active:hover{
+    color:gray;
+    background-color:lightgray;
+}
+
+
+
